--- a/imgui.ini
+++ b/imgui.ini
@@ -50,34 +50,43 @@ Collapsed=0
 DockId=0x00000006,1
 
 [Window][Status Window]
-Pos=0,54
+Pos=3,170
 Size=284,509
 Collapsed=0
 
 [Window][MEGS-A Image Viewer]
-Pos=322,4
+Pos=327,4
 Size=427,331
 Collapsed=0
 
 [Window][MEGS-B Image Viewer]
-Pos=753,7
+Pos=753,4
 Size=443,330
 Collapsed=0
 
 [Window][ESP Window]
-Pos=284,335
-Size=635,438
+Pos=270,338
+Size=517,438
 Collapsed=0
 
 [Window][SDO-EVE Rocket Data Display]
-Pos=0,0
-Size=347,53
+Size=348,158
 Collapsed=0
 
 [Window][MEGS-B Image Simple Viewer]
 ViewportPos=811,110
 ViewportId=0x3CF4131C
 Size=2064,1080
+Collapsed=0
+
+[Window][SDO-EVE Rocket FPGA Status]
+Pos=6,10
+Size=332,250
+Collapsed=0
+
+[Window][Channel Status]
+Pos=9,262
+Size=258,496
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
