--- a/imgui.ini
+++ b/imgui.ini
@@ -55,18 +55,18 @@ Size=284,509
 Collapsed=0
 
 [Window][MEGS-A Image Viewer]
-Pos=259,283
-Size=470,512
+Pos=262,371
+Size=473,321
 Collapsed=0
 
 [Window][MEGS-B Image Viewer]
-Pos=730,283
-Size=467,512
+Pos=724,261
+Size=466,321
 Collapsed=0
 
 [Window][ESP Window]
-Pos=588,3
-Size=504,400
+Pos=334,5
+Size=787,397
 Collapsed=0
 
 [Window][SDO-EVE Rocket Data Display]
@@ -87,6 +87,16 @@ Collapsed=0
 [Window][Channel Status]
 Pos=9,273
 Size=268,496
+Collapsed=0
+
+[Window][MA Row Plots]
+Pos=258,572
+Size=471,224
+Collapsed=0
+
+[Window][MB Row Plots]
+Pos=729,579
+Size=465,219
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
