--- a/Makefile_gui
+++ b/Makefile_gui
@@ -26,8 +26,8 @@ CXXFLAGS += -DENABLEGUI
 
 PCH_FLAGS = -include spdlog_pch.hpp
 
-FAST_FLAGS =  -Wall -O2 #-O2
-TEST_FLAGS = -Wall -O2 # -O1 is considered safe for valgrind
+FAST_FLAGS =  -Wall -O1 -g #-O2
+TEST_FLAGS = -Wall -O1 -g # -O1 is considered safe for valgrind
 DEBUG_FLAGS = -g -Wall
 
 LFLAGS = -lcfitsio -lm -lspdlog -lfmt -lokFrontPanel -fopenmp -lGL -lz
