--- a/Makefile_gui
+++ b/Makefile_gui
@@ -15,7 +15,8 @@ IMGUI_DIR = ./imgui
 IMGUI_BACKEND_DIR = $(IMGUI_DIR)/backends
 
 INCLUDE_PATH = -I/usr/local/include -I$(IMGUI_DIR) -I$(IMGUI_BACKEND_DIR)
-CXXFLAGS = -std=c++17 -fopenmp    #`pkg-config --cflags glfw3`
+CXXFLAGS = -std=c++17 -fopenmp -march=native
+#`pkg-config --cflags glfw3`
 
 # Check if SKIPPARITY is defined during compilation
 ifdef SKIPPARITY
@@ -27,7 +28,7 @@ CXXFLAGS += -DENABLEGUI
 PCH_FLAGS = -include spdlog_pch.hpp
 
 FAST_FLAGS =  -Wall -O1 -g #-O2
-TEST_FLAGS = -Wall -O1 -g # -O1 is considered safe for valgrind
+TEST_FLAGS = -Wall  -g # -O1 is considered safe for valgrind
 DEBUG_FLAGS = -g -Wall
 
 LFLAGS = -lcfitsio -lm -lspdlog -lfmt -lokFrontPanel -fopenmp -lGL -lz
